--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   keep-history: true
   github-token: $GITHUB_TOKE
   local-dir: dist/
-  target-branch: gh_pages
+  target-branch: gh-pages
   commit_message: "Deploy release"
   on: 
     branch: master
